--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="azul">#FF3700B3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="green">#00FF00</color>
+    <color name="primary">#FF0000</color>
+    <color name="gray">#808080</color>
 </resources>
