--- a/app/src/main/res/layout/activity_item_carrinho.xml
+++ b/app/src/main/res/layout/activity_item_carrinho.xml
@@ -43,7 +43,7 @@
         android:layout_width="55dp"
         android:layout_height="45dp"
         android:background="@color/laranja"
-        android:text="@string/menos"
+        android:text="-"
         android:textColor="@color/white"
         android:layout_toRightOf="@id/btnLixeira"
         android:layout_alignTop="@id/btnLixeira" />
@@ -66,7 +66,7 @@
         android:layout_width="55dp"
         android:layout_height="45dp"
         android:background="@color/laranja"
-        android:text="@string/mais"
+        android:text="+"
         android:textColor="@color/white"
         android:layout_toRightOf="@id/quantidadeItem"
         android:layout_alignTop="@id/btnLixeira" />
