--- a/app/src/main/res/layout/item_lista.xml
+++ b/app/src/main/res/layout/item_lista.xml
@@ -48,6 +48,6 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="?attr/selectableItemBackground"
-        android:src="@drawable/ic_delete"
+        android:src="@drawable/ic_android_black_24dp"
         android:contentDescription="Excluir item" />
 </LinearLayout>
