--- a/app/src/main/res/layout/activity_carrinho.xml
+++ b/app/src/main/res/layout/activity_carrinho.xml
@@ -6,6 +6,18 @@
     android:padding="16dp"
     android:background="@drawable/cenariofundo">
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/retornar"
+        android:src="@drawable/ic_back"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/campTituloCarrinho"
         android:layout_width="wrap_content"
@@ -62,5 +74,4 @@
             app:cornerRadius="8dp"
             android:textAllCaps="false" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
