--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/cenariofundo"
     tools:context="autenticar_user.login.LoginActivity">
-    >
 
     <ImageView
         android:id="@+id/padokaLogo"
@@ -35,7 +34,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="211dp" />
+        tools:layout_editor_absoluteY="211dp"
+        app:layout_constraintTop_toBottomOf="@id/padokaLogo"/>
 
     <EditText
         android:id="@+id/campPassword"
