--- a/app/src/main/res/layout/activity_cardapio.xml
+++ b/app/src/main/res/layout/activity_cardapio.xml
@@ -134,7 +134,7 @@
                     android:id="@+id/docesTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Salgados"
+                    android:text="Doces"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
