Ajustado a relação dos campos para ficar embaixo do outro, já que em produção estava quebrando.

--- a/app/src/main/res/layout/activity_redefinir_senha.xml
+++ b/app/src/main/res/layout/activity_redefinir_senha.xml
@@ -32,7 +32,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="211dp" />
+        tools:layout_editor_absoluteY="211dp"
+        app:layout_constraintTop_toBottomOf="@id/padokaLogo"/>
 
     <TextView
         android:id="@+id/campInstrucaoRecuperacao"
