--- a/app/src/main/res/layout/activity_item_lista.xml
+++ b/app/src/main/res/layout/activity_item_lista.xml
@@ -43,11 +43,10 @@
             android:textColor="#000" />
     </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/btnExcluir"
+    <Button
+        android:id="@+id/btnDetal"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="?attr/selectableItemBackground"
-        android:src="@drawable/ic_android_black_24dp"
-        android:contentDescription="Excluir item" />
+        android:src="@drawable/baseline_add_24" />
 </LinearLayout>
