--- a/app/src/main/res/layout/activity_item_lista.xml
+++ b/app/src/main/res/layout/activity_item_lista.xml
@@ -22,7 +22,7 @@
             android:id="@+id/txtTitulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nome do Item"
+            android:text="@string/nomeItem"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -38,15 +38,16 @@
             android:id="@+id/txtPreco"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="R$ 0.00"
+            android:text="@string/precoItem"
             android:textSize="14sp"
             android:textColor="#000" />
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/btnDetal"
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:src="@drawable/ic_add"
         android:background="?attr/selectableItemBackground"
-        android:src="@drawable/baseline_add_24" />
+        />
 </LinearLayout>
