--- a/app/src/main/res/layout/activity_item_detalhe.xml
+++ b/app/src/main/res/layout/activity_item_detalhe.xml
@@ -17,7 +17,7 @@
             android:layout_height="40dp"
             android:layout_marginEnd="16dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Voltar"
+            android:contentDescription="@string/voltar"
             android:src="@drawable/baseline_arrow_back_ios_new_24" />
 
         <TextView
@@ -77,7 +77,7 @@
                 android:text="R$ 00,00"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/green"
+                android:textColor="@color/marrom"
                 android:layout_marginBottom="16dp" />
 
             <LinearLayout
@@ -112,7 +112,7 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:text="Adicionar ao Pedido"
-        android:backgroundTint="@color/primary"
+        android:backgroundTint="@color/laranja"
         android:textColor="@color/white"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"/>
 </LinearLayout>
