--- a/app/src/main/res/layout/activity_item_lista.xml
+++ b/app/src/main/res/layout/activity_item_lista.xml
@@ -43,7 +43,7 @@
             android:textColor="#000" />
     </LinearLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/btnDetal"
         android:layout_width="40dp"
         android:layout_height="40dp"
