--- a/app/src/main/res/layout/activity_item_carrinho.xml
+++ b/app/src/main/res/layout/activity_item_carrinho.xml
@@ -1,31 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/cenariofundo"
     android:padding="8dp">
 
+    <ImageView
+        android:id="@+id/imagemItemCarrinho"
+        android:layout_width="85dp"
+        android:layout_height="85dp"
+        android:src="@color/cardview_dark_background"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="Imagem" />
+
     <TextView
         android:id="@+id/nomeItem"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/nomeItem"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imagemItemCarrinho"
+        app:layout_constraintEnd_toStartOf="@id/btnLixeira"
+        android:layout_marginStart="8dp" />
 
     <TextView
         android:id="@+id/precoItem"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:paddingEnd="10dp"
         android:text="@string/precoItem"
         android:textColor="@android:color/darker_gray"
         android:textSize="18sp"
-        android:layout_below="@id/nomeItem"
-        android:layout_alignParentStart="true" />
+        app:layout_constraintTop_toBottomOf="@id/nomeItem"
+        app:layout_constraintStart_toEndOf="@id/imagemItemCarrinho"
+        app:layout_constraintEnd_toStartOf="@id/btnLixeira"
+        android:layout_marginStart="8dp" />
+
+    <Button
+        android:id="@+id/btnAdicionarItem"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/laranja"
+        android:text="+"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imagemItemCarrinho" />
+
+    <TextView
+        android:id="@+id/quantidadeItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="4dp"
+        android:paddingHorizontal="4dp"
+        android:paddingVertical="6dp"
+        android:text="@string/numberOne"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/btnAdicionarItem"
+        app:layout_constraintTop_toBottomOf="@id/imagemItemCarrinho" />
+
+    <Button
+        android:id="@+id/btnRemoveItem"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/laranja"
+        android:text="-"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@id/quantidadeItem"
+        app:layout_constraintTop_toBottomOf="@id/imagemItemCarrinho" />
 
     <Button
         android:id="@+id/btnLixeira"
@@ -35,49 +89,8 @@
         android:background="@color/laranja"
         android:text="🗑"
         android:textColor="@android:color/white"
-        android:layout_below="@id/precoItem"
-        android:layout_alignParentStart="true" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-    <Button
-        android:id="@+id/btnRemoveItem"
-        android:layout_width="55dp"
-        android:layout_height="45dp"
-        android:background="@color/laranja"
-        android:text="-"
-        android:textColor="@color/white"
-        android:layout_toRightOf="@id/btnLixeira"
-        android:layout_alignTop="@id/btnLixeira" />
-
-    <TextView
-        android:id="@+id/quantidadeItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="12dp"
-        android:text="@string/numberOne"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_toRightOf="@id/btnRemoveItem"
-        android:layout_alignTop="@id/btnLixeira" />
-
-    <Button
-        android:id="@+id/btnAdicionarItem"
-        android:layout_width="55dp"
-        android:layout_height="45dp"
-        android:background="@color/laranja"
-        android:text="+"
-        android:textColor="@color/white"
-        android:layout_toRightOf="@id/quantidadeItem"
-        android:layout_alignTop="@id/btnLixeira" />
-
-    <ImageView
-        android:id="@+id/imagemItemCarrinho"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:layout_marginLeft="8dp"
-        android:src="@color/cardview_dark_background"
-        android:layout_toRightOf="@id/btnAdicionarItem"
-        android:layout_centerVertical="true" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
