--- a/app/src/main/res/layout/activity_item_lista.xml
+++ b/app/src/main/res/layout/activity_item_lista.xml
@@ -24,7 +24,8 @@
             android:layout_height="wrap_content"
             android:text="Nome do Item"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/txtDescricao"
