--- a/app/src/main/res/layout/activity_carrinho.xml
+++ b/app/src/main/res/layout/activity_carrinho.xml
@@ -35,6 +35,7 @@
         android:id="@+id/carrinhotRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/campTituloCarrinho"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
